macro (MAKE_FF7TK_WIDGETS_TEST NAME FILE)
    add_executable(${NAME} ${FILE})
    target_link_libraries(${NAME} ff7tkWidgets Qt::Test)
    add_test(NAME ${NAME} COMMAND $<TARGET_FILE:${NAME}> WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/../../src/widgets")
    set_tests_properties(${NAME} PROPERTIES DEPENDS ff7tkWidgets)
endmacro()
